# LJ_Statistics

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/endpoints/: health.py  search.py  top_channels.py
app/core/: database.py  logging.py  redis.py  scheduler.py  settings.py
app/models/: __init__.py  search_result.py  top_channel.py
app/services/: channel_names.py  search_service.py  top_channels_service.py  utils.py  youtube_client.py
app/static/: index.html
infra/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
scripts/: README.md  collect_channel_ids.py
tests/: test_health.py
